--- a/css/kenzie-swinford-style.css
+++ b/css/kenzie-swinford-style.css
@@ -12,7 +12,7 @@ header{
 h1{
 	text-align: center;
 	font-variant: small-caps;
-	font-family: "Agency FB", "Bahnschrift SemiBold Condensed", "Bahnschrift";
+	font-family: "Agency FB", "Bahnschrift SemiBold Condensed", "Bahnschrift", Arial;
 	font-size: 750%;
 	color: #EBEAEB;
 	margin-bottom: 20px;
