--- a/css/kenzie-swinford-default.css
+++ b/css/kenzie-swinford-default.css
@@ -1,4 +1,4 @@
-html, body, header, section, mark, h1, h2, h3, h4, h5, p, nav, a, h2, h3, footer,figure{
+html, body, header, section, mark, h1, h2, h3, h4, h5, p, nav, a, h2, h3, footer, figure, img{
 	margin: 0px;
 	padding: 0px;
 	border: 0px;
