--- a/css/kenzie-swinford-default.css
+++ b/css/kenzie-swinford-default.css
@@ -1,4 +1,4 @@
-html, body, header, section, mark, h1, h2, h3, h4, h5, p, nav, a, h2, h3, footer, figure, img{
+html, body, header, section, mark, h1, h2, h3, h4, h5, p, nav, a, footer, figure, img{
 	margin: 0px;
 	padding: 0px;
 	border: 0px;
@@ -7,6 +7,10 @@ html, body, header, section, mark, h1, h2, h3, h4, h5, p, nav, a, h2, h3, footer
 	vertical-align: baseline;
 	background: transparent;
 	text-decoration: none;
+}
+
+ul{
+	margin: 0px;
 }
 
 body{
